--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,21 +1,29 @@
+.container {
+  max-width: 1000px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .filters {
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
+  background-color: white;
+  height: 70px;
+  width: 1000px;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
 }
-.filters button{
-    font-size: 18px;
-    background: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border: none;
-    border-radius: 4px;
-    float: right;
-    margin: 12px 30px;
+.filters button {
+  font-size: 18px;
+  background: #ff5a5f;
+  color: #ffffff;
+  height: 48px;
+  width: 20%;
+  border: none;
+  border-radius: 4px;
+  float: right;
+  margin: 12px 30px;
 }
-.filters button:hover{
-    background-color: hsl(0, 100%, 80%);
+.filters button:hover {
+  background-color: hsl(0, 100%, 80%);
 }
